[package]
name = "support_service"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
actix-web="3"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web-actors = "3.0.0"
actix-rt = "1.1.0"
async-graphql-actix-web = "2.5.1"
async-graphql = "2.0"
serde = "1.0.103"
serde_json = "1.0"
futures = "0.3.4"
slab = "0.4.2"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
mini-redis = "0.4.0"
bson = "1.2.0"
load-dotenv = "0.1.2"
[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]