[package]
name = "support_service"
version = "0.1.1"
authors = ["constantine <thehanterx2@gmail.com>"]
edition = "2018"

[dependencies]
actix-web="4.3.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix-rt = "2.8.0"
async-graphql-actix-web = "5.0.8"
async-graphql = "5.0.8"
serde = "1.0.103"
serde_json = "1.0"
futures = "0.3.4"
slab = "0.4.2"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
mini-redis = "0.4.0"
bson = "2.6.1"
load-dotenv = "0.1.2"
[dependencies.mongodb]
version = "2.5.0"
default-features = true
features = ["tokio-runtime"]